@@ -32,7 +32,6 @@ from Products.ATContentTypes.content.schemata import ATContentTypeSchema
 
 from Products.ATContentTypes.content.document import ATDocument
 from Products.ATContentTypes.content.event import ATEvent
-from Products.ATContentTypes.content.favorite import ATFavorite
 from Products.ATContentTypes.content.file import ATFile
 from Products.ATContentTypes.content.folder import ATFolder
 from Products.ATContentTypes.content.folder import ATBTreeFolder
@@ -43,7 +42,6 @@ from Products.ATContentTypes.content.topic import ATTopic
 
 from Products.ATContentTypes.content.document import ATDocumentSchema
 from Products.ATContentTypes.content.event import ATEventSchema
-from Products.ATContentTypes.content.favorite import ATFavoriteSchema
 from Products.ATContentTypes.content.file import ATFileSchema
 from Products.ATContentTypes.content.folder import ATFolderSchema
 from Products.ATContentTypes.content.folder import ATBTreeFolderSchema
@@ -84,4 +82,3 @@ from Products.ATContentTypes.criteria.selection import ATSelectionCriterionSchem
 from Products.ATContentTypes.criteria.simpleint import ATSimpleIntCriterionSchema
 from Products.ATContentTypes.criteria.simplestring import ATSimpleStringCriterionSchema
 from Products.ATContentTypes.criteria.sort import ATSortCriterionSchema
-
