@@ -22,7 +22,6 @@ from Products.ATContentTypes.interface.interfaces import IATContentType
 from Products.ATContentTypes.interface.interfaces import IHistoryAware
 from Products.ATContentTypes.interface.interfaces import ICalendarSupport
 from Products.ATContentTypes.interface.interfaces import ITextContent
-from Products.ATContentTypes.interface.interfaces import IATFavorite
 from Products.ATContentTypes.interface.interfaces import ISelectableConstrainTypes
 from Products.ATContentTypes.interface.interfaces import IATCTTool
 
