@@ -1,3 +1,0 @@
-[default]
-title=Favorites (broken)
-cache=HTTPCache
